<resources>
    <string name="app_name" translatable="false">Let\'s note</string>
    <string name="app_version">App version 1.0</string>
    <string name="app_icon">App icon</string>
    <string name="welcome_text">Let\'s get started</string>
    <string name="sign_in_tot">By signing in you are accepting the terms and conditions</string>
    <string name="timeStamp"> Edited on %1$s at %2$s</string>
    <string name="font_seekbar_desc">Font seekbar</string>
    <string name="font_style_desc">Font seekbar</string>
    <string name="date_time_set">"%1$s set  :"  %2$s</string>
    <string name="reminder_set_today"> Reminder set today at %1$s</string>
    <string name="reminder_set_tomorrow"> Reminder set tomorrow at %1$s</string>
    <string name="deletedTime"> Deleted on %1$s at %2$s</string>
    <string name="archivedTime"> Archived on %1$s at %2$s</string>
    <string name="noteTagCountSingle"> %1$s Note</string>
    <string name="noteCountMultiple"> %1$s Notes</string>
    <string name="reminder">Reminder set on %1$s at %2$s</string>
    <string name="opt1Desc">Later today at %1$s</string>
    <string name="opt2n3Desc">Tomorrow in the %1$s at %2$s</string>
    <string name="app_version_template">Application version %1$s</string>
    <string name="rate_app">Would you like to rate our app?</string>
    <string name="tagTitle">#%1$s</string>
    <string name="createNewTag">Create #%1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="add_tag_hint">#neverLoseANote</string>
    <string name="date_button">Date</string>
    <string name="time_button">Time</string>
    <string name="action_settings">Settings</string>

    <string name="menu_allNotes">All Notes</string>
    <string name="menu_archived">Archived Notes</string>
    <string name="menu_tag">Tags</string>
    <string name="menu_label">Labels</string>
    <string name="menu_todo">Todos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="pinned_notes">Pinned Notes</string>
    <string name="other_notes">Other Notes</string>
    <string name="title">Title</string>
    <string name="tags">Tags</string>
    <string name="notes">Notes</string>
    <string name="labels">Labels</string>
    <string name="note_content">Note content</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="Save">Save</string>
    <string name="pick_a_label">Pick a label</string>
    <string name="add_tag_button">Add tag</string>
    <string name="todo_icon">Todo icon</string>
    <string name="ocr_button">OCR</string>
    <string name="undo_button">Undo</string>
    <string name="redo_button">Redo</string>
    <string name="lock_icon">Note locked icon</string>
    <string name="Cancel">Cancel</string>
    <string name="label_icon">Label icon</string>
    <string name="day_night_mode">Day or Night mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="default_mode">Default</string>
    <string name="note">Note</string>
    <string name="font_style">Font style</string>
    <string name="font_size">Font size</string>
    <string name="fingerprint_retry">Click the fingerprint icon to try again</string>
    <string name="skip">Skip</string>
    <string name="yes">Yes</string>
    <string name="note_archived">Note archived</string>
    <string name="note_unarchived">Note unarchived</string>
    <string name="note_pinned">Note pinned</string>
    <string name="note_unpinned">Note unpinned</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_locked">Note locked</string>
    <string name="note_unlocked">Note unlocked</string>
    <string name="note_saved">Note saved</string>
    <string name="note_updated">Note updated</string>
    <string name="note_restored">Note restored</string>
    <string name="delete_or_archive_notes">Delete or Archive notes</string>
    <string name="delete_or_restore_notes">Delete or Restore notes</string>
    <string name="notes_deleted_successfully">Note%1$s deleted successfully</string>
    <string name="notes_archived_successfully">Note%1$s archived successfully</string>
    <string name="notes_restored_successfully">Note%1$s restored successfully</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="recognizer_unavailable">Sorry recognizer is unavailable</string>
    <string name="undo">UNDO</string>
    <string name="choose_date_and_time">Choose date and time</string>
    <string name="reminder_set">Reminder set</string>
    <string name="reminder_menu_desc">Set a reminder</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="general_warning_message">Are you sure about this ?</string>
    <string name="logout_anonymous_message">If you proceed, you will lose your notes. Please link your google account first</string>
    <string name="no_internet_connection_init">Requires an internet connection for initial setup</string>
    <string name="delete_tag_button">Delete tag</string>
    <string name="link_to_google">Link with your Google account</string>
    <string name="sign_in">Sign in</string>
    <string name="empty_trash">Empty trash automatically</string>
    <string name="risk_text">You stand at risk of losing your notes because the app is not linked to your Google account</string>
    <string name="all_labels_text">All your labels appear here</string>
    <string name="all_notes_text">All your notes appear here</string>
    <string name="all_tags_text">All your tags appear here</string>
    <string name="all_todo_text">All your todo items appear here</string>
    <string name="all_deleted_text">All your trash items appear here and will be deleted after 7 days</string>
    <string name="tag_icon">Tag icon</string>
    <string name="label_title">Label title</string>
    <string name="choose_date">Choose the date</string>
    <string name="choose_time">Choose the time</string>
    <string name="clock_icon">Clock icon</string>
    <string name="trash_icon">Clock icon</string>
    <string name="tomorrow_morning">Tomorrow morning</string>
    <string name="choose_date_time">Choose date and time</string>
    <string name="tomorrow_afternoon">Tomorrow afternoon</string>
    <string name="today_8pm">Later today in the morning at 8:00pm</string>
    <string name="termsAndConditions"><u>Terms and Conditions</u></string>
    <string name="privacyPolicy"><u>Privacy Policy</u></string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="new_note_button">New note</string>
    <string name="new_todo_button">New todo</string>
    <string name="architects_daughter">Architects daughter</string>
    <string name="abreeze">Abreeze</string>
    <string name="adamina">Adamina</string>
    <string name="archive">Archive</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="protect">Lock note</string>
    <string name="pin_note">Pin note</string>
    <string name="edit_label">Edit label</string>
    <string name="grid_layout">Grid layout</string>
    <string name="list_layout">List layout</string>
    <string name="clear_trash">Clear trash</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_and_sign_out_alert">You will lose all your stored notes if you proceed</string>
    <string name="delete_and_sign_out">Delete data and sign out</string>
    <string name="delete_and_sign_out_message">All your information has been wiped out</string>
    <string name="note_type_button">Note type</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="add_label_button">Add label</string>
    <string name="previous">Previous</string>
    <string name="arrow_icon">Arrow icon</string>
    <string name="reminder_icon">Reminder Icon</string>
    <string name="fingerprint_icon">Fingerprint Icon</string>
    <string name="dismiss_todo_button">Dismiss todo</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="_hint">Todo item</string>
    <string name="add_todo_item">Add todo item</string>
    <string name="note_shortcut_short_label">New note</string>
    <string name="note_shortcut_long_label">Take a note</string>
    <string name="todo_shortcut_short_label">New todo</string>
    <string name="todo_shortcut_long_label">Make a todo list</string>
    <string name="app_id">ca-app-pub-6883474616906010~6031666398</string>
    <string name="banner">ca-app-pub-6883474616906010/7788720752</string>
    <string name="interstitial">ca-app-pub-6883474616906010/3767684880</string>
    <string name="delete_todo_button">Delete todo item</string>
    <string name="drag_todo_button">Drag todo</string>
    <string name="all_notes_list">List of all notes</string>
    <string name="all_todo_list">List of all todos</string>
    <string name="all_archived_list">List of all archived notes</string>
    <string name="all_tag_list">List of all tags</string>
    <string name="all_label_list">List of all labels</string>
    <string name="all_label_notes">List of all notes belonging to this label</string>
    <string name="all_tag_notes">List of all notes belonging to this tag</string>
    <string name="all_deleted_notes">List of all deleted notes</string>
    <string name="delete_note">Delete Note</string>
    <string name="new_todo_note">New todo</string>
    <string name="new_text_note">New note</string>
    <string name="share_app">Share App</string>
    <string name="let_others_know_about_us">Let others know about us</string>
    <string name="okay">Okay</string>
    <string name="release_notes">Release notes</string>
    <string name="release_notes_desc">- UI optimisation \n- Reminder fix  \n- Crash fixes when adding a new tag  \n- Language support for French, German, Spanish, Italian and Swahili \n- Other bug fixes</string>
    <string name="never_lose_a_note">Never lose a note</string>
    <string name="welcome">Welcome</string>
    <string name="back_up_active">Backup activated</string>
    <string name="back_up_deactivated">Backup deactivated</string>
    <string name="never_lose_a_note_desc">Your notes are backed up to the cloud so that you are never worried about your notes getting lost</string>
    <string name="need_privacy">Need some privacy ?</string>
    <string name="need_privacy_desc">We\'ve got you covered. Protected notes are only accessible when authenticated by your fingerprint reader</string>
    <string name="scared_forgetting">Hmm… scared of forgetting something</string>
    <string name="scared_forgetting_desc">No need to worry, set a reminder so that you never have to forget stuff</string>
    <string name="link_complete">Link completed, cloud backup activated</string>
    <string name="line_type">Link type</string>
    <string name="link_copied">Link copied to clipboard</string>
    <string name="phone_copied">Phone number copied to clipboard</string>
    <string name="email_copied">Email copied to clipboard</string>
</resources>