<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/layoutStyle"
        android:icon="@drawable/baseline_grid_view_24"
        android:title="@string/grid_layout"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/trash"
        android:title="@string/clear_trash"
        android:icon="@drawable/baseline_delete_forever_24"
        app:showAsAction="always"/>
    <item
        android:id="@+id/signOut"
        android:title="@string/sign_out"
        android:icon="@drawable/baseline_logout_24"
        app:showAsAction="never"/>

    <item
        android:id="@+id/deleteAndSignOut"
        android:title="@string/delete_and_sign_out"
        android:icon="@drawable/baseline_logout_24"
        app:showAsAction="never"/>


</menu>