<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:padding="16dp"
    android:background="@drawable/save_shared_background"
    android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/appIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@mipmap/ic_launcher1_round"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/appIcon"
        android:layout_marginStart="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appIcon"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:id="@+id/noteEditTitle"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/noteEditDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/note_content"
        android:scrollbars="vertical"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lineSpacingMultiplier="1.1"
        android:linksClickable="true"
        android:maxHeight="200dp"
        android:minHeight="60dp"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="@+id/noteEditTitle"
        app:layout_constraintStart_toStartOf="@+id/noteEditTitle"
        app:layout_constraintTop_toBottomOf="@id/noteEditTitle"
        app:layout_goneMarginTop="8dp" />
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/cancel_button_background"
        android:text="@string/Cancel"
        android:textColor="@color/timberwolf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/saveNoteButton" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:id="@+id/saveNoteButton"
        android:text="@string/Save"
        android:background="@drawable/save_button_background"
        android:textColor="@color/timberwolf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>